adding madlibs modified 2.0

--- a/madlibs.html
+++ b/madlibs.html
@@ -3,10 +3,10 @@
 <body>
 </body>
 <script>
-var noun = 'hamburger';
-var adjective = 'sloppy';
-var verb = 'sleeping';
-var adverb = 'slept';
+var noun = prompt("Pick a noun: ");
+var adjective = prompt("Pick an adjective: ");
+var verb = prompt("Pick a verb: ");
+var adverb = prompt("Pick an adverb: ");
 console.log("On a tropical " + noun + ",/nUnderneath a " + adjective + " moon./n" + verb + " with the " + adverb + " dancers,/nAskin' questions cause' they got all the answers.");
 </script>
 </html>
